# pyqt-calculator

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE.md  README.md  pyproject.toml  requirements-dev.txt
docs/: ARCHITECTURE.md
src/calculator/: __main__.py  controller.py  main.py  model.py  style.qss  view.py
tests/: test_controller.py  test_model.py
