[build-system]
requires = ["setuptools>=82", "wheel>=0.46"]
build-backend = "setuptools.build_meta"

[project]
name = "pyqt-calculator"
version = "0.1.0"
description = "A simple desktop calculator built with PyQt6"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.14"
dependencies = [
    "PyQt6>=6.10.2",
]

[project.optional-dependencies]
dev = [
    "black>=26.3",
    "isort>=8.0",
    "flake8>=7.3",
    "mypy>=1.19",
    "pre-commit>=4.5",
    "pytest>=8.0",
]

[project.scripts]
calculator = "calculator.main:main"

[tool.black]
line-length = 80
target-version = ["py314"]

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.14"
warn_return_any = true